# mlops_test

./: .gitignore  Readme.md  app.py  pyproject.toml
.github/workflows/: ci.yml  dev_testapimlops.yml  dev_testapioc.yml
