[tool.poetry]
name = "mlops-test"
version = "0.1.0"
description = "A simple project to test mlops."
authors = ["Daviddlhy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"